--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,3 +1,9 @@
+<!-- 
+    Author: Sarvarbek Usmonov
+    File: index.html
+    Purpose: Chatting app main page
+    Date: March 20, 2023
+ -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,8 +15,10 @@
 <body>
     <div id="chat-window"></div>
     <div id="input-area">
-        <input type="text" id="alias" placeholder="Enter your alias">
-        <input type="text" id="message" placeholder="Enter your message">
+        <label>Alias <input type="text" id="alias" placeholder="Enter your alias"></label>
+        <br> <br>
+        <label>Message <input type="text" id="message" placeholder="Enter your message"></label>
+        <br> <br>
         <button id="send-btn">Send Message</button>
     </div>
     <script src="scripts.js"></script>
